# tss12

./: Cargo.toml  run_huckel.py
examples/: verify_inputs.py
examples/molecules/: au13.json  benzene.json  generate_graphene.py  graphene_16x16.json  naphthalene.json  ptcl4.json
examples/reactions/: butadiene_cyclization.json  sn2_ch3cl_f.json
src/: eigen_cpu.rs  eigen_gpu.rs  html_template.rs  huckel.rs  lib.rs  output.rs  svg_gen.rs  types.rs
src/shaders/: matvec.wgsl
