[package]
name = "huckel_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "huckel_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
byteorder = "1.5"

[profile.release]
opt-level = 3
lto = true
